project structur added

--- a/app/src/main/res/layout-land/tab_1.xml
+++ b/app/src/main/res/layout-land/tab_1.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="luck.materialdesign.demo.MainActivity">
+    tools:context="luck.materialdesign.demo.activity.MainActivity">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/card_recycler_view"
         android:scrollbars="none"
