--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="luck.materialdesign.demo.MainActivity">
+    tools:context="luck.materialdesign.demo.activity.MainActivity">
 
     <LinearLayout
     android:layout_width="match_parent"
